
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-03-12 DP  1.8.0  Show only tables & views (as 'catalog objects') in 
                      pseudo-system catalogs such as information_schema and
                      EDB's sys and dbo catalogs. Lock down functionality to
                      prevent create/edit/drop options being offered.
2007-03-09 DP  1.8.0  Create and reverse engineer edbspl procedures using
                      Oracle compatible syntax.
2007-03-09 DP  1.8.0  Treat all functions & procedures as 'Functions' in
                      PostgreSQL, and class only EnterpriseDB edbspl functions
                      returning void as 'Procedures'.
2007-03-08 DP  1.8.0  Preserve column widths between queries.
2007-03-08 DP  1.8.0  Use EnterpriseDB's utilities for dump and restore EDB
                      databases to ensure non-PG extensions can be handled.
2007-03-07 DP  1.8.0  Speed up loading of functions and procedures by rewriting
                      some horribly inefficient code.
2007-03-06 DP  1.6.3  Fix a bug that prevented adding new nodes to a Slony
                      cluster, per Duncan Beeby.
2007-03-06 DP  1.6.3  Remember the server's SSL mode property correctly.
2007-03-05 DP  1.6.3  Prevent the RULE privilege becoming re-enabled for tables
                      on PostgreSQL 8.2+, per Erwin.
2007-03-05 DP  1.8.0  Add support for packages on EnterpriseDB.
2007-03-05 DP  1.6.3  Minor fix for edb/spl functions.
2007-03-02 DP  1.6.3  Fix procedure support on EnterpriseDB AS81.
2007-03-02 DP  1.8.0  Add support for public synonyms on EnterpriseDB.
2007-03-02 DP  1.8.0  Use pg_statindex (if available) to optionally display