@@ -35,7 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
-2007-03-12 DP  1.8.0  Show only tables & views (as 'catalog objects') in 
+2007-03-12 DP  1.8.0  Use Oracle style syntax for edbspl triggers.
+2007-03-12 DP  1.8.0  Show only tables & views (as 'catalog objects') in
                       pseudo-system catalogs such as information_schema and
                       EDB's sys and dbo catalogs. Lock down functionality to
                       prevent create/edit/drop options being offered.
